fix width (scrollbar appears)  because of right border on section

--- a/source/stylesheets/timesheet.sass
+++ b/source/stylesheets/timesheet.sass
@@ -43,6 +43,7 @@
       height: 100%
 
       &:last-child
+        width: 118px
         border-right: 1px dashed rgba(250, 250, 250, 0.2)
 
   .date
